<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/whiteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="白灯"
        android:textSize="30dp"
        />

    <CheckBox
        android:id="@+id/redCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/whiteCheckBox"
        android:text="红灯"
        android:textSize="30dp"
        />

    <CheckBox
        android:checked="true"
        android:id="@+id/greenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/redCheckBox"
        android:text="绿灯"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/timesEditText"
        android:layout_width="60dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toRightOf="@+id/greenCheckBox"
        android:text="20"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/timesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="次/分钟"
        app:layout_constraintLeft_toRightOf="@+id/timesEditText"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/testButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/whiteCheckBox"
        android:text="test"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/testButton1"
        />

    <Button
        android:id="@+id/tenPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/closeButton"
        />

    <Button
        android:id="@+id/twentyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twenty_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tenPercentButton"
        />

    <Button
        android:id="@+id/thrityPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thrity_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentButton"
        />

    <Button
        android:id="@+id/fortyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forty_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/thrityPercentButton"
        />

    <Button
        android:id="@+id/fiftyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fifty_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/fortyPercentButton"
        />

    <Button
        android:id="@+id/sixtyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixty_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/fiftyPercentButton"
        />

    <Button
        android:id="@+id/seventyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seventy_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/sixtyPercentButton"
        />

    <Button
        android:id="@+id/eightyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eighty_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/seventyPercentButton"
        />

    <Button
        android:id="@+id/ninetyPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ninety_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/eightyPercentButton"
        />

    <Button
        android:id="@+id/hundredPercentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hundred_percent_closed_name"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/ninetyPercentButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>